syntax = "proto3";
option go_package="src/crypto";

message EncryptRequest {
    bytes msg = 1;
    repeated bytes pks = 2;
    uint64 t = 3;
    uint64 n = 4;
}

// DecryptData function messages
message DecryptDataRequest {
    bytes enc = 1;
    repeated bytes pks = 2;
    repeated bytes parts = 3;
    bytes sa1 = 4;
    bytes sa2 = 5;
    bytes iv = 6;
    uint64 t = 7;
    uint64 n = 8;
}

// PartialDecrypt function messages
message PartialDecryptRequest {
    bytes gammaG2 = 1;
}

// VerifyPart function messages
message VerifyPartRequest {
    bytes pk = 1;
    bytes gammaG2 = 2;
    bytes partDec = 3;
}

message EncryptResponse {
    bytes enc = 1;
    bytes sa1 = 2;
    bytes sa2 = 3;
    bytes iv = 4;
    bytes gamma_g2 = 5;
}

// Response message
message Response {
    bytes result = 1;
}
